@@ -2,11 +2,11 @@ Hi!
 
 A developer responded on your recent LikeBack feedback message. This is the message you sent us:
 
-{$comment}
+{$comment|wrapQuote}
 
 A developer, {$developer->login}, wrote this message to you:
 
-{$remark}
+{$remark|wrapQuote}
 
 If you need to reply to this message, please use the original LikeBack form within the application.
 
